--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,4 +12,20 @@
     h3 {
         @apply text-xl;
     }
+
+    .text-rainbow {
+        background-image: repeating-linear-gradient(45deg, violet, indigo, blue, green, yellow, orange, red, violet);
+        text-align: center;
+        background-size: 800% 800%;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 24px;
+        animation: rainbow 8s ease infinite;
+    }
+
+    @keyframes rainbow {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 25%}
+        100%{background-position:0% 50%}
+    }
 }
